# src/routes/delete-did.ts
@@ -9,18 +9,26 @@ export class DeleteDid {
 
     public routes(app): void {
 
-        app.post('/polygon/delete-did', async (req, res) => {
+        app.delete('/delete-did/:did/:privateKey', async (req, res) => {
 
             try {
-                const did = req.body.did;
-                const privateKey = req.body.privateKey;
+                const did = req.params.did;
+                const privateKey = req.params.privateKey;
 
                 const deleteDidRes = await deleteDidDoc(did, privateKey)
                     .then((response) => {
                         return response;
                     });
 
-                res.status(201).send(deleteDidRes);
+                const gasPrice = deleteDidRes.data.gasPrice;
+                const gasLimit = deleteDidRes.data.gasLimit;
+
+                const gasPriceDecimal = parseInt(gasPrice._hex.substr(2), 16);
+                const gasLimitDecimal = parseInt(gasLimit._hex.substr(2), 16);
+
+                const txnFee = (gasPriceDecimal * gasLimitDecimal / Math.pow(10, 18))
+
+                res.status(200).json({ success: deleteDidRes.success, data: { gasPrice, gasLimit, TX_Fee: txnFee }, message: deleteDidRes.message });
                 logger.debug(
                     `deleteDidRes - ${JSON.stringify(deleteDidRes)} \n\n\n`
                 );
@@ -28,7 +36,7 @@ export class DeleteDid {
                 logger.error(
                     `DeleteDid Error- ${JSON.stringify(error)} \n\n\n`
                 );
-                res.send(error);
+                res.status(500).send(error);
             }
         })
     }
