# src/routes/register-did-on-polygon.ts
@@ -9,7 +9,7 @@ export class RegisterDid {
 
     public routes(app): void {
 
-        app.post('/polygon/register-did', async (req, res) => {
+        app.post('/register-did', async (req, res) => {
 
             try {
                 const did = req.body.did;
@@ -20,7 +20,15 @@ export class RegisterDid {
                         return response;
                     });
 
-                res.status(201).send(registerDidRes);
+                const gasPrice = registerDidRes.data.txnHash.gasPrice;
+                const gasLimit = registerDidRes.data.txnHash.gasLimit;
+
+                const gasPriceDecimal = parseInt(gasPrice._hex.substr(2), 16);
+                const gasLimitDecimal = parseInt(gasLimit._hex.substr(2), 16);
+
+                const txnFee = (gasPriceDecimal * gasLimitDecimal / Math.pow(10, 18))
+
+                res.status(201).json({ success: registerDidRes.success, data: { gasPrice, gasLimit, TX_Fee: txnFee }, message: registerDidRes.message });
                 logger.debug(
                     `registerDidRes - ${JSON.stringify(registerDidRes)} \n\n\n`
                 );
@@ -28,7 +36,7 @@ export class RegisterDid {
                 logger.error(
                     `RegisterDid Error- ${JSON.stringify(error)} \n\n\n`
                 );
-                res.send(error);
+                res.status(500).send(error);
             }
         })
     }
